# qr

./: .gitignore  README.md  composer.json
.circleci/: config.yml
.github/: builder.yml
.github/workflows/: builder.yml
dart/: README.md  pubspec.yaml
dart/example/: uonet_qr_example.dart
dart/lib/: uonet_qr.dart
dart/lib/src/: uonet_qr_base.dart
dart/test/: uonet_qr_test.dart
dotnet/: README.md  Wulkanowy.Qr.sln  WulkanowyQr.sln
dotnet/Wulkanowy.Qr/: Qr.cs  Wulkanowy.Qr.csproj
dotnet/Wulkanowy.Qr.Example/: Program.cs  Wulkanowy.Qr.Example.csproj
dotnet/Wulkanowy.Qr.Test/: QrTest.cs  Wulkanowy.Qr.Test.csproj
dotnet/WulkanowyQr/: Qr.cs
dotnet/WulkanowyQr.Example/: Program.cs  WulkanowyQr.Example.csproj
dotnet/WulkanowyQr.Test/: QrTest.cs  WulkanowyQr.Test.csproj
jvm/: README.md  build.gradle  settings.gradle
node/: README.md  package.json  test.js
node/src/: index.d.ts  index.js
node/src/test/: test.js
php/: README.md
php/src/: converter.php
php/tests/: ConverterTest.php
python/: README.md  pyproject.toml  requirements-dev.txt  wualknowyqr.py  wulkanowyqr.py
python/test/: __init__.py
python/wulkanowy_qr/: __init__.py
swift/: .gitignore  Package.resolved  Package.swift  Podfile  README.md
swift/Sources/vulcan-qr/: vulcan_qr.swift
swift/Tests/vulcan-qrTests/: vulcan_qrTests.swift
swift/vulcan-qr/: VulcanQR.swift  vulcan_qr.h
swift/vulcan-qr.xcodeproj/: project.pbxproj
swift/vulcan-qr.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
swift/vulcan-qr.xcworkspace/: contents.xcworkspacedata
(+3 files in other folders)
